Added a new paragraph

--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         <tite>My Simple HTML Page</tite>
     </head>
     <body>
-        <h1>Hello, World</h1>
+        <h1>Hello, World!</h1>
     </body>
 </html>
